--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
             <h1 class="display-4">Password Generator</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <p class="lead">For the most secure passwords.</p>
             </div>
         </div>
         
